--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,8 +37,8 @@ dependencies {
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
     compile 'com.jakewharton:butterknife:8.8.1'
-
-
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.github.apl-devs:appintro:v4.2.2'
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
