--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.android.support:preference-v14:26.0.2'
     implementation 'com.github.bumptech.glide:glide:4.3.1'
     implementation 'com.google.firebase:firebase-core:11.0.4'
+    implementation 'com.google.firebase:firebase-database:11.0.4'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.1'
     compile 'com.yarolegovich:sliding-root-nav:1.1.0'
     compile 'com.sothree.slidinguppanel:library:3.4.0'
@@ -50,6 +51,8 @@ dependencies {
     implementation files('libs/jaudiotagger-android-2.2.3.jar')
     implementation files('libs/jsoup-1.11.2.jar')
 }
+
+
 
 
 
