--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,15 +68,25 @@
 
         <activity android:name=".FeedBackActivity" />
 
-        <receiver android:name=".Widgets.AppWidgetSmall">
+
+       <!-- <receiver android:name=".Widgets.BootReciever">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.intent.action.QUICKBOOT_POWERON" />
+            </intent-filter>
+        </receiver>-->
+
+        <!--<receiver android:name=".Widgets.AppWidgetSmall">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+
+
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/app_widget_small_info" />
-        </receiver>
+        </receiver>-->
     </application>
 
 </manifest>
